--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="gmap.js" defer></script>
     <script src="https://mapbox.github.io/geojson-vt/geojson-vt-dev.js"></script>
+    <script src="echarts.min.js" defer></script>
+    <script src="gmap.js" defer></script>
     <!--googlemapAPI的文档里给的专门用于中国的api地址，不用翻墙-->
-    <!--<script src="http://maps.google.cn/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>
+    <script src="http://maps.google.cn/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>
+    <!--必须要求是https时，就只能用这个google的需要翻墙的地址-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>-->
     <title>Olmap as control</title>
     <style>
         html,
@@ -39,10 +41,17 @@
             height: 100%;
         }
         
-        #card {
+        #LandInformation {
             font-family: 'Microsoft YaHei UI', Helvetica, sans-serif;
             position: fixed;
             top: 5%;
+            right: 5%;
+        }
+        
+        #Charts {
+            font-family: 'Microsoft YaHei UI', Helvetica, sans-serif;
+            position: fixed;
+            top: 25%;
             right: 5%;
         }
     </style>
@@ -50,22 +59,9 @@
 
 <body>
     <div id="gmap"></div>
-    <!--只有先建立了一个Div来装openlayer的map，它才会显示。-->
+    <!--试了一下只有先建立了一个Div来装openlayer的map，它才会显示。-->
     <div id="ControlDiv"></div>
-    <!--floating Components-->
-    <div id="Components" class="Components" style="display: none">
-        <!-- 点击后才显示的部件 -->
-        <!--<div id="popup" title="选择的Region:"></div>-->
-        <!--一直显示着的部件-->
-        <div id="card" class="card" style="width: 20rem;">
-            <!--<img class="card-img-top" src="..." alt="Card image cap">-->
-            <div class="card-block">
-                <h4 class="card-title">地块ID：</h4>
-                <p id="info" class="card-text">&nbsp</p>
-                <a href="#" class="btn btn-primary">也许需要一个链接</a>
-            </div>
-        </div>
-    </div>
+    <!--一直显示着的部件-->
 </body>
 
 </html>
