--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://mapbox.github.io/geojson-vt/geojson-vt-dev.js"></script>
-    <script src="echarts.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/3.4.0/echarts.min.js"></script>
     <script src="gmap.js" defer></script>
     <!--googlemapAPI的文档里给的专门用于中国的api地址，不用翻墙-->
-    <script src="http://maps.google.cn/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>
+<!--     <script src="http://maps.google.cn/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script> -->
     <!--必须要求是https时，就只能用这个google的需要翻墙的地址-->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?region=cn&language=zh-CN&key=AIzaSyDVuM5lBEKtvdpUb1xNkPa-C38ToZWx8Ws&callback=ShowingMap" async defer></script>
     <title>Olmap as control</title>
     <style>
         html,
