--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title">
-                            <a data-toggle="collapse" href="#taskpane">
+                            <a data-toggle="collapse" href="#Chartpane">
                                 <i class="fa fa-tasks mr-1"></i> 图表
                             </a>
                             <span class="pull-right slide-submenu">
@@ -161,7 +161,7 @@
                   </span>
                         </h4>
                     </div>
-                    <div id="taskpane" class="card-collapse collapse show">
+                    <div id="Chartpane" class="card-collapse collapse show">
                         <div id="Charts">
                             <div id="Line">
                             </div>
